--- a/index.html
+++ b/index.html
@@ -9,7 +9,61 @@
 <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 </head>
+<body>
+
+<div class="page-header">
+  <h1>Choo Choo Train Station</h1>
+  <h2><small>All Aboard!!!</small></h2>
+</div>
+
+<div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-heading">All Trains</div>
+  <!-- Table -->
+  <table class="table">
+   <tr>
+   	<th>Train Name</th>
+
+   	<th>Destination</th>
+
+   	<th>Frequency(min)</th>
+
+   	<th>Next Arrival</th>
+
+   	<th>Minutes Away</th>
+   </tr>
+
+  </table>
+</div>
+
+
+<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Train Time</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Destination</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail1">First Train Time(HH:mm - military time)</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Frequency(min)</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+
+
+
+
+
 
 </body>
 </html>
